# density_analyzer_ai

./: .gitignore  README.md
backend/: .env.example  pyproject.toml
backend/src/spectrana_density/: __init__.py  ai_agent.py  config.py  main.py  schemas.py  storage.py
backend/src/spectrana_density/signal/: __init__.py  conducted_jammer.py  density.py  jammer.py
backend/src/spectrana_density/sources/: __init__.py  aaronia.py  base.py  factory.py  mock.py
backend/tests/: test_ai_agent.py  test_conducted_jammer.py  test_density.py  test_jammer.py  test_storage.py  test_stream_parser.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  i18n.ts  styles.css  types.ts
